Add header, footer, burger menu and hero section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,10 +25,10 @@
           >
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#style">Visual Style</a>
+          <a class="nav-list-link" href="./index.html#gallery">Gallery</a>
         </li>
         <li class="nav-list-item">
-          <a class="nav-list-link" href="./index.html#faq">FAQ</a>
+          <a class="nav-list-link" href="./index.html#experience">Experience</a>
         </li>
         <li class="nav-list-item">
           <a class="nav-list-link" href="./index.html#contact">Contact</a>
