--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,31 +2,15 @@
   <div class="hero-bg-wrapper">
     <div class="container hero-container">
       <div class="hero-content-wrapper">
-        <picture>
-          <source
-            srcset="./img/hero/hero-title-desk.png"
-            media="(min-width: 1440px)"
-            width="288"
-            height="198" />
-          <source
-            srcset="./img/hero/hero-title-mob.png"
-            width="217"
-            height="149" />
-          <img
-            class="hero-img"
-            src="./img/hero/hero-title-mob.png"
-            alt="Title"
-            width="217"
-            height="149"
-        /></picture>
+        <h1 class="hero-main-title">Lara’s Journey</h1>
         <p class="hero-text">
-          Set sail on a dreamy cruise filled with romance, drama, and
-          ridiculously addictive match-3 puzzles you’ll swear you’ll quit after
-          “just one more level.”
+          You'll be solving these colorful puzzles, unlocking ancient secrets,
+          and basically hopping between all these mysterious lands every time
+          you beat a level.
         </p>
         <a
           class="hero-btn"
-          href="https://play.google.com/store/apps/details?id=com.treenod.lovecruise.android.Google.global.normal&hl=en&gl=us"
+          href="https://play.google.com/store/apps/details?id=com.larasjourney3.game&hl=en&gl=us"
           target="_blank"
           rel="noopener noreferrer"
         >
