--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -16,10 +16,12 @@
         >
       </li>
       <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#style">Visual Style</a>
+        <a class="context-list-link" href="./index.html#gallery">Gallery</a>
       </li>
       <li class="context-list-item">
-        <a class="context-list-link" href="./index.html#faq">FAQ</a>
+        <a class="context-list-link" href="./index.html#experience"
+          >Experience</a
+        >
       </li>
       <li class="context-list-item">
         <a class="context-list-link" href="./index.html#contact">Contact</a>
