--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #354ca1;
+  background: #134f46;
   padding: 6px 0;
   position: fixed;
   width: 100%;
@@ -46,8 +46,8 @@
 
 .nav-list-link {
   padding: 4px 8px;
-  font-family: 'Nunito', sans-serif;
-  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
   font-size: 16px;
   line-height: 1.4;
   text-align: center;
