--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,6 +15,6 @@
         </li>
       </ul>
     </nav>
-    <p class="footer-text">© 2026 slotplanetx.online — All rights reserved.</p>
+    <p class="footer-text">© 2026 slotreign.pro — All rights reserved.</p>
   </div>
 </footer>
