--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #354ca1;
+  background: #134f46;
   padding-top: 60px;
   padding-bottom: 60px;
 
@@ -35,16 +35,16 @@
 }
 
 .footer-link {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.4;
   text-align: center;
   color: #fff;
   transition: color 0.3s ease-in-out;
 
   @include media(desktop) {
-    font-size: 18px;
+    font-size: 20px;
   }
 
   &:hover,
@@ -53,12 +53,12 @@
 }
 
 .footer-text {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
   text-align: center;
-  color: #fff;
+  color: #adb9b0;
 
   @include media(desktop) {
     font-size: 18px;
