--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -4,8 +4,8 @@
 }
 
 .hero-bg-wrapper {
-  padding-top: 374px;
-  padding-bottom: 24px;
+  padding-top: 419px;
+  padding-bottom: 32px;
   max-width: 375px;
   margin-left: auto;
   margin-right: auto;
@@ -15,8 +15,8 @@
   background-size: cover;
 
   @include media(desktop) {
-    padding-top: 170px;
-    padding-bottom: 107px;
+    padding-top: 223px;
+    padding-bottom: 161px;
     max-width: 1440px;
     background-image: url(../img/hero/hero-bg-desk.jpg);
   }
@@ -28,41 +28,45 @@
 }
 
 .hero-content-wrapper {
-  backdrop-filter: blur(12px);
-  box-shadow: inset 0 20px 20px 0 rgba(137, 159, 212, 0.4);
-  background: #fff;
-  border: 8px solid #a5bfff;
-  border-radius: 36px;
-  padding: 24px 8px;
-
   @include media(desktop) {
-    padding: 32px 16px;
-    max-width: 411px;
+    max-width: 600px;
+    margin-left: auto;
   }
 }
 
-.hero-img {
-  margin-left: auto;
-  margin-right: auto;
+.hero-main-title {
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
+  font-size: 62px;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  background: linear-gradient(145deg, #68b129 0%, #1a6e14 42.24%, #15a214 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 24px;
 
   @include media(desktop) {
-    margin-bottom: 40px;
+    font-size: 112px;
+    line-height: 1;
   }
 }
 
 .hero-text {
-  font-family: 'Nunito', sans-serif;
-  font-weight: 400;
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: 1.3;
   text-align: center;
-  color: #313131;
-  margin-bottom: 24px;
+  color: #adb9b0;
+  margin-bottom: 40px;
 
   @include media(desktop) {
-    font-size: 20px;
-    margin-bottom: 40px;
+    font-size: 18px;
+    max-width: 460px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
@@ -70,11 +74,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #1b31b9;
+  background: #fcff45;
   border-radius: 50px;
   padding: 12px 20px;
   width: 100%;
-  max-width: 311px;
+  max-width: 343px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -86,11 +90,19 @@
   &:hover,
   &:focus,
   &:active {
-    background: #122328;
+    background: #161616;
+
+    .her-btn-top-text {
+      color: #ebebeb;
+    }
+
+    .her-btn-bottom-text {
+      color: #ebebeb;
+    }
   }
 
   @include media(desktop) {
-    max-width: 240px;
+    max-width: 220px;
   }
 }
 
@@ -103,8 +115,9 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   font-size: 14px;
-  color: #ebebeb;
+  color: #000;
   margin-bottom: 4px;
+  transition: color 0.3s ease-in-out;
 
   @include media(desktop) {
   }
@@ -114,7 +127,8 @@
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 18px;
-  color: #ebebeb;
+  color: #000;
+  transition: color 0.3s ease-in-out;
 
   @include media(desktop) {
   }
