--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,5 +1,5 @@
 .context-menu {
-  background: #354ca1;
+  background: #134f46;
   display: none;
   justify-content: center;
   width: 100%;
@@ -31,12 +31,12 @@
   justify-content: center;
   align-items: center;
   padding: 4px 8px;
-  font-family: 'Manrope', sans-serif;
-  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
   font-size: 16px;
   line-height: 1.4;
   text-align: center;
-  color: #e9e9e9;
+  color: #ede0de;
   transition: color 0.3s ease-in-out;
 
   &:active {
