--- a/src/partials/play.html
+++ b/src/partials/play.html
@@ -1,72 +1,53 @@
 <section class="section play-section" id="play">
   <div class="play-bg-wrapper">
     <div class="container play-container">
-      <h2 class="section-title play-title">• HOW TO PLAY</h2>
-      <p class="section-subtitle play-subtitle">Puzzles With a View</p>
+      <h2 class="section-title play-title">How To Play</h2>
+      <p class="section-subtitle play-subtitle">CORE GAMEPLAY</p>
       <p class="play-text">
-        It starts easy enough — classic match-3 fun — but levels gradually
-        introduce new challenges that actually make you think, not just swipe
-        mindlessly.
+        It starts off pretty simple (I mean, anyone can match three gems,
+        right?), but don't worry - it definitely gets more challenging as you
+        progress.
       </p>
       <ul class="play-list">
         <li class="play-list-item">
           <div class="play-item-img-wrapper">
-            <img
-              class="play-img"
-              src="./img/play/play-img1.png"
-              alt="Screenshot of the game"
-              width="120"
-              height="120"
-              loading="lazy"
-            />
+            <svg class="play-icon" width="96" height="96">
+              <use href="./img/sprite.svg#icon-play1"></use>
+            </svg>
           </div>
           <p class="play-item-text">
-            Match three or more tiles to clear the board
+            Match three or more gems to clear them from the board
           </p>
         </li>
         <li class="play-list-item">
           <div class="play-item-img-wrapper">
-            <img
-              class="play-img"
-              src="./img/play/play-img2.png"
-              alt="Screenshot of the game"
-              width="120"
-              height="120"
-              loading="lazy"
-            />
+            <svg class="play-icon" width="96" height="96">
+              <use href="./img/sprite.svg#icon-play2"></use>
+            </svg>
           </div>
           <p class="play-item-text">
-            Complete level goals using a limited number of moves
+            Complete level objectives using limited moves
           </p>
         </li>
         <li class="play-list-item">
           <div class="play-item-img-wrapper">
-            <img
-              class="play-img"
-              src="./img/play/play-img3.png"
-              alt="Screenshot of the game"
-              width="120"
-              height="120"
-              loading="lazy"
-            />
+            <svg class="play-icon" width="96" height="96">
+              <use href="./img/sprite.svg#icon-play3"></use>
+            </svg>
           </div>
           <p class="play-item-text">
-            Navigate blocked tiles and layered obstacles
+            Deal with tricky blocked tiles and those annoying multi-layered
+            pieces
           </p>
         </li>
         <li class="play-list-item">
           <div class="play-item-img-wrapper">
-            <img
-              class="play-img"
-              src="./img/play/play-img4.png"
-              alt="Screenshot of the game"
-              width="120"
-              height="120"
-              loading="lazy"
-            />
+            <svg class="play-icon" width="96" height="96">
+              <use href="./img/sprite.svg#icon-play4"></use>
+            </svg>
           </div>
           <p class="play-item-text">
-            Create powerful combos to clear large areas at once
+            Create powerful combos to clear large sections at once
           </p>
         </li>
       </ul>
