--- a/src/partials/privacy.html
+++ b/src/partials/privacy.html
@@ -3,7 +3,7 @@
     <h1 class="policy-main-title">Privacy Policy</h1>
     <p class="policy-text">
       Last Updated: 2025-12-23<br />
-      This Privacy Policy applies to the slotplanetx.online website (hereinafter
+      This Privacy Policy applies to the slotreign.pro website (hereinafter
       referred to as "Website"). By accessing or using our services, you agree
       to the collection and use of information as described in this policy.
     </p>
@@ -138,8 +138,8 @@
     <p class="policy-text">
       If you have any questions or concerns about this Privacy Policy, please
       contact us at
-      <a class="policy-link" href="mailto:info@slotplanetx.online"
-        >info@slotplanetx.online</a
+      <a class="policy-link" href="mailto:info@slotreign.pro"
+        >info@slotreign.pro</a
       >.
     </p>
   </div>
