--- a/src/partials/progression.html
+++ b/src/partials/progression.html
@@ -3,34 +3,40 @@
     <div class="container progression-container">
       <div class="progression-content-wrapper">
         <div class="progression-text-wrapper">
-          <h2 class="section-title progression-title">• PROGRESSION</h2>
+          <h2 class="section-title progression-title">
+            Adventure & progression
+          </h2>
           <p class="section-subtitle progression-subtitle">
-            life unfolds between levels
+            explore more as you play
           </p>
           <p class="progression-text">
-            Levels in Love Cruise unfold through story-driven chapters,
-            revealing new cruise locations and characters along the way. Short
-            story scenes appear between puzzles, keeping the game relaxing yet
-            engaging — perfect for a quick break or a “just one more level”
-            night.
+            Levels are organized into themed chapters, each introducing new
+            visual environments and fresh challenges. As you progress, story
+            moments and new areas unlock naturally, while the difficulty
+            increases smoothly to keep the experience engaging without feeling
+            overwhelming.
+          </p>
+          <p class="progression-bottom-text">
+            It’s perfect for a quick session on the bus — or those moments when
+            five minutes of play quietly turn into an entire evening.
           </p>
         </div>
         <picture>
           <source
             srcset="./img/progression/progression-img-desk.png"
             media="(min-width: 1440px)"
-            width="640"
-            height="492" />
+            width="554"
+            height="740" />
           <source
             srcset="./img/progression/progression-img-mob.png"
             width="343"
-            height="264" />
+            height="458" />
           <img
             class="progression-img"
             src="./img/progression/progression-img-mob.png"
             alt="Screenshot of the game"
             width="343"
-            height="264"
+            height="458"
             loading="lazy"
         /></picture>
       </div>
