--- a/src/partials/terms.html
+++ b/src/partials/terms.html
@@ -3,10 +3,10 @@
     <h1 class="policy-main-title">Terms and Conditions</h1>
     <p class="policy-text">
       Last Updated: 2025-12-23<br />
-      These Terms and Conditions apply to the slotplanetx.online website
-      (hereinafter referred to as "Website"). By accessing or using our
-      services, you agree to comply with and be bound by these Terms and
-      Conditions. Please review them carefully before using our Website.
+      These Terms and Conditions apply to the slotreign.pro website (hereinafter
+      referred to as "Website"). By accessing or using our services, you agree
+      to comply with and be bound by these Terms and Conditions. Please review
+      them carefully before using our Website.
     </p>
     <h2 class="policy-title">1. Acceptance of Terms</h2>
     <p class="policy-text">
@@ -96,8 +96,8 @@
     <p class="policy-text">
       If you have any questions or suggestions about the Terms and Conditions,
       please do not hesitate to contact us at
-      <a class="policy-link" href="mailto:info@slotplanetx.online"
-        >info@slotplanetx.online</a
+      <a class="policy-link" href="mailto:info@slotreign.pro"
+        >info@slotreign.pro</a
       >.
     </p>
   </div>
