--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,8 +7,8 @@
 @import './components/play.scss';
 @import './components/boosters.scss';
 @import './components/progression.scss';
-@import './components/style.scss';
-@import './components/faq.scss';
+@import './components/gallery.scss';
+@import './components/experience.scss';
 @import './components/contact.scss';
 @import './components/footer.scss';
 @import './components/banner.scss';
