--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,29 +1,31 @@
 <section class="section contact-section" id="contact">
-  <div class="container contact-container">
-    <div class="contact-content-wrapper">
-      <h2 class="section-title contact-title">• Contact</h2>
-      <p class="section-subtitle contact-subtitle">we’re here if you need us</p>
-      <a href="mailto:info@slotplanetx.online" class="contact-link">
-        <span class="contact-btn-span">info@slotplanetx.online</span>
-        <svg class="arrow-icon" width="32" height="32">
-          <use href="./img/sprite.svg#icon-arrow"></use>
-        </svg>
-      </a>
-      <p class="contact-text">Publisher: Slotreign Games</p>
-      <a
-        class="hero-btn contact-btn"
-        href="https://play.google.com/store/apps/details?id=com.treenod.lovecruise.android.Google.global.normal&hl=en&gl=us"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        <svg class="playstore-icon" width="30" height="34">
-          <use href="./img/sprite.svg#icon-playstore"></use>
-        </svg>
-        <div class="hero-btn-text-wrapper">
-          <p class="her-btn-top-text">GET IT ON</p>
-          <p class="her-btn-bottom-text">Google Play</p>
-        </div>
-      </a>
+  <div class="contact-bg-wrapper">
+    <div class="container contact-container">
+      <div class="contact-content-wrapper">
+        <h2 class="contact-title">CONTACT & SUPPORT</h2>
+        <p class="contact-subtitle">Questions or feedback?</p>
+        <a href="mailto:info@slotreign.pro" class="contact-link">
+          <span class="contact-btn-span">info@slotreign.pro</span>
+          <svg class="arrow-icon" width="32" height="32">
+            <use href="./img/sprite.svg#icon-arrow"></use>
+          </svg>
+        </a>
+        <a
+          class="hero-btn contact-btn"
+          href="https://play.google.com/store/apps/details?id=com.larasjourney3.game&hl=en&gl=us"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <svg class="playstore-icon" width="30" height="34">
+            <use href="./img/sprite.svg#icon-playstore"></use>
+          </svg>
+          <div class="hero-btn-text-wrapper">
+            <p class="her-btn-top-text">GET IT ON</p>
+            <p class="her-btn-bottom-text">Google Play</p>
+          </div>
+        </a>
+        <p class="contact-text">Publisher: Slotreign Games</p>
+      </div>
     </div>
   </div>
 </section>
