--- a/src/partials/cookies.html
+++ b/src/partials/cookies.html
@@ -98,8 +98,8 @@
     <h2 class="policy-title">7. Contact Us</h2>
     <p class="policy-text">
       If you have any questions about this Cookies Policy, you can contact us at
-      <a class="policy-link" href="mailto:info@slotplanetx.online"
-        >info@slotplanetx.online</a
+      <a class="policy-link" href="mailto:info@slotreign.pro"
+        >info@slotreign.pro</a
       >.
     </p>
   </div>
