--- a/src/scss/components/experience.scss
+++ b/src/scss/components/experience.scss
@@ -1,7 +1,7 @@
-.play-section {
+.experience-section {
 }
 
-.play-bg-wrapper {
+.experience-bg-wrapper {
   padding-top: 64px;
   padding-bottom: 64px;
   max-width: 375px;
@@ -15,22 +15,22 @@
   }
 }
 
-.play-container {
+.experience-container {
   @include media(desktop) {
   }
 }
 
-.play-title {
+.experience-title {
   @include media(desktop) {
   }
 }
 
-.play-subtitle {
+.experience-subtitle {
   @include media(desktop) {
   }
 }
 
-.play-text {
+.experience-text {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -45,7 +45,7 @@
   }
 }
 
-.play-list {
+.experience-list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -59,7 +59,8 @@
   }
 }
 
-.play-list-item {
+.experience-list-item {
+  padding: 0 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -67,56 +68,22 @@
   width: 100%;
   max-width: 304px;
 
-  &:nth-child(1) {
-    .play-item-img-wrapper {
-      background: #59bad4;
-    }
-  }
-
-  &:nth-child(2) {
-    .play-item-img-wrapper {
-      background: #f5ad39;
-    }
-  }
-
-  &:nth-child(3) {
-    .play-item-img-wrapper {
-      background: #a673cf;
-    }
-  }
-
-  &:nth-child(4) {
-    .play-item-img-wrapper {
-      background: #90c113;
-    }
-  }
-
   @include media(desktop) {
     max-width: 304px;
   }
 }
 
-.play-item-img-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 105px;
-  padding: 52px;
-
+.experience-img {
   @include media(desktop) {
   }
 }
 
-.play-img {
-  @include media(desktop) {
-  }
-}
-
-.play-item-text {
+.experience-item-text {
   font-family: 'Inter', sans-serif;
   font-weight: 600;
   font-size: 18px;
   line-height: 1.4;
+  text-transform: uppercase;
   text-align: center;
   color: #4d5a5e;
 
