--- a/src/scss/components/privacy.scss
+++ b/src/scss/components/privacy.scss
@@ -1,5 +1,5 @@
 .policy-section {
-  background: #edf4f5;
+  background: #fff;
   padding-top: 112px;
   padding-bottom: 60px;
 
@@ -10,14 +10,13 @@
 }
 
 .policy-main-title {
-  font-family: 'Nunito', sans-serif;
-  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  font-weight: 600;
   font-size: 32px;
-  line-height: 1.3;
-  letter-spacing: -0.02em;
-  text-transform: capitalize;
+  line-height: 1.4;
+  text-transform: uppercase;
   text-align: center;
-  color: #313131;
+  color: #161616;
   margin-bottom: 40px;
 
   @include media(desktop) {
@@ -26,11 +25,11 @@
 }
 
 .policy-title {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 600;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.4;
-  color: #313131;
+  color: #161616;
   margin-bottom: 16px;
 
   @include media(desktop) {
@@ -39,11 +38,11 @@
 }
 
 .policy-text {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
-  color: #313131;
+  color: #161616;
 
   &:not(:last-child) {
     margin-bottom: 16px;
@@ -60,11 +59,11 @@
 }
 
 .policy-item {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
-  color: #313131;
+  color: #161616;
   margin-bottom: 8px;
 
   &:last-child {
